--- a/views/index1.html
+++ b/views/index1.html
@@ -11,10 +11,10 @@
     <title>Rest Api Ulhaq Mz</title>
     <meta property="og:site_name" name="og:site_name" content="Ulhaq Mz Rest Api">
     <meta property="og:title" name="og:title" content="Ulhaq Mz Rest Api">
-    <meta property="og:url" name="og:url" content="https://Ulhaq Mz-api.herokuapp.com">
+    <meta property="og:url" name="og:url" content="https://hax-api.herokuapp.com">
     <meta property="og:description" name="og:description" content="">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <link rel="shortcut icon" href="https://telegra.ph/file/f17f2a1ef76c43abd26f7.png" type="img/logo/logo.png" /> <!-- GANTI FOTO ICON DISINI -->
+    <link rel="shortcut icon" href="https://telegra.ph/file/be0e54bcf0a37386687c3.jpg" type="img/logo/logo.png" /> <!-- GANTI FOTO ICON DISINI -->
     <meta name="theme-color" content="#ffffff">
     <link rel="canonical" href="https://hax-api.herokapp.com/docs">
 </head>
@@ -31,7 +31,7 @@
     </div>
     <div class="bottom">
         <p>
-            <a href="Wa.me/62895330026617" rel="noopener noreferrer" class="sosmed"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+            <a href="wa.me/62895330026617" rel="noopener noreferrer" class="sosmed"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         </p>
     </div>
 </body>
@@ -45,7 +45,7 @@
 }
 
 html {
-    background: url(https://telegra.ph/file/78ea1c66a9686db0441ef.jpg) no-repeat center center fixed; 
+    background: url(https://telegra.ph/file/2544801362f4d4cb3ee9e.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
