--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
 
   gtag('config', 'UA-94034622-3');
 </script>
- <audio autoplay="autoplay" hidden="hidden" src="https://g.top4top.io/m_2349enk3v0.mp3"></audio>
+ <audio autoplay="autoplay" hidden="hidden" src="https://k.top4top.io/m_2407wudn30.mp3"></audio>
 </head>
 
 <body>
