--- a/views/index.html
+++ b/views/index.html
@@ -72,7 +72,7 @@
                     <div class="is-online"></div>
                   </div>
                   <div class="dropdown-item-desc">
-                     <b>Fandyy</b>
+                     <b>Firman</b>
                     <p>Mantep Api Nya 🗿</p>
                     <div class="time">1 Jam Yang Lalu</div>
                   </div>
@@ -82,7 +82,7 @@
                     <img alt="image" src="img/avatar/avatar-2.png" class="rounded-circle">
                   </div>
                   <div class="dropdown-item-desc">
-                    <b>Iky</b>
+                    <b>Zalexy</b>
                     <p>Bagi Esceh Banh</p>
                     <div class="time">12 Menit Yang Lalu</div>
                   </div>
@@ -356,7 +356,8 @@
                   <div class="card-body">
                   <li>Allah SWT</li>
                   <li>Nabi Muhammad Saw</li>
-                  <li>Lann Ofc (Me)</li>
+                  <li>Ulhaq Mz (me)</li>
+                  <li>Lann Ofc</li>
                   <li>ReySekha</li>
                   <li>Zahirr</li>
                   <li>Fandyy</li>
@@ -414,13 +415,13 @@
   <script src="js/scripts.js"></script>
   <script src="js/custom.js"></script>    
   <script> 
-  	$.getJSON("https://api.countapi.xyz/hit/betabotz-api.herokuapp.com/visits",
+  	$.getJSON("https://api.countapi.xyz/hit/hax-api.herokuapp.com/visits",
 	function(data) {
 	$("#visitor").html(data.value);
 	})
 	</script>
 	<script>
-		$.getJSON("https://api.countapi.xyz/hit/betaapikey.herokuapp.com/hit", 
+		$.getJSON("https://api.countapi.xyz/hit/hax-api.herokuapp.com/hit", 
 		function(data) {
 			$("#hit").html(data.value)
 			})
