--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.8/font-awesome-animation.min.css"/>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Ulhaq Mz Rest Api</title>
+  <title>Ulhaq Mz - Rest Api</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="modules/bootstrap/css/bootstrap.min.css">
@@ -117,7 +117,7 @@
           </li>
           <li class="dropdown"><a href="/profile" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
             <img alt="image" src="img/avatar/avatar-1.png" class="rounded-circle mr-1">
-            <div class="d-sm-none d-lg-inline-block">Lann Ofc</div></a>
+            <div class="d-sm-none d-lg-inline-block">Ulhaq Mz</div></a>
             <div class="dropdown-menu dropdown-menu-right">
               <a href="/profile" class="dropdown-item has-icon">
                 <i class="far fa-user"></i> Profile
