--- a/views/index.html
+++ b/views/index.html
@@ -358,14 +358,11 @@
                   <li>Nabi Muhammad Saw</li>
                   <li>Ulhaq Mz (me)</li>
                   <li>Lann Ofc</li>
-                  <li>ReySekha</li>
-                  <li>Zahirr</li>
-                  <li>Fandyy</li>
+                  <li>Firman Aryadi</li>
+                  <li>Zalex</li>
+                  <li>Duta Store</li>
                   <li>My Ortu</li>
-                  <li>Fardan Xwer</li>
-                  <li>Atak Bot</li>
                   <li>Penyedia Module Api</li>
-                  <li>Stisla For Template</li>
                   <li>Dan kalian yang sudah menggunakan api dengan baik</li>
                   </div>                  
                 </div>
@@ -377,7 +374,7 @@
                   </div>
                   <div class="card-body">
                   <li><a href="https://instagram.com/ulhaqmz_">Instagram</a></li>
-                  <li><a href="https://t.me/BetaBot200">Telegram</a></li>
+                  <li><a href="https://t.me/ulhaqmz">Telegram</a></li>
                   <li><a href="https://wa.me/62895330026617">WhatsApp</a></li>
                   <li><a href="https://github.com/ulhaqmz">Github</a></li>
                   </div>                  
