--- a/views/index.html
+++ b/views/index.html
@@ -287,7 +287,7 @@
      <div class="main-content">
         <section class="section">
           <div class="section-header">
-            <h1>Ulhaq Mz Api</h1>
+            <h1>Ulhaq Mz - Rest Api</h1>
             <div class="section-header-breadcrumb">
               <div class="breadcrumb-item active"><a href="/">Home</a></div>
               <div class="breadcrumb-item">Dashboard</div>
@@ -357,9 +357,9 @@
                   <li>Allah SWT</li>
                   <li>Nabi Muhammad Saw</li>
                   <li>Ulhaq Mz (me)</li>
-                  <li>Lann Ofc</li>
                   <li>Firman Aryadi</li>
-                  <li>Zalex</li>
+                  <li>Alkha</li>
+                  <li>Fadli</li>
                   <li>Duta Store</li>
                   <li>My Ortu</li>
                   <li>Penyedia Module Api</li>
