--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.8/font-awesome-animation.min.css"/>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Ulhaq Mz Rest Api</title>
+  <title>Ulhaq Mz - Rest Api</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="modules/bootstrap/css/bootstrap.min.css">
@@ -82,7 +82,7 @@
                     <img alt="image" src="img/avatar/avatar-2.png" class="rounded-circle">
                   </div>
                   <div class="dropdown-item-desc">
-                    <b>Zalexy</b>
+                    <b>Zalex</b>
                     <p>Bagi Esceh Banh</p>
                     <div class="time">12 Menit Yang Lalu</div>
                   </div>
