--- a/views/index1.html
+++ b/views/index1.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>Rest Api Ulhaq Mz</title>
+    <title>Rest Api - Ulhaq Mz</title>
     <meta property="og:site_name" name="og:site_name" content="Ulhaq Mz Rest Api">
     <meta property="og:title" name="og:title" content="Ulhaq Mz Rest Api">
     <meta property="og:url" name="og:url" content="https://hax-api.herokuapp.com">
@@ -45,7 +45,7 @@
 }
 
 html {
-    background: url(https://telegra.ph/file/2544801362f4d4cb3ee9e.jpg) no-repeat center center fixed; 
+    background: url(https://telegra.ph/file/2dae2a9fcf86eaf67ec47.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
