--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.8/font-awesome-animation.min.css"/>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Ulhaq Mz - Rest Api</title>
+  <title>Ulhaq Mz │ Rest Api</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="modules/bootstrap/css/bootstrap.min.css">
@@ -137,7 +137,7 @@
       <div class="main-sidebar sidebar-style-2">
         <aside id="sidebar-wrapper">
           <div class="sidebar-brand">
-            <a>Rest Api - Ulhaq Mz</a>
+            <a>Rest Api │ Ulhaq Mz</a>
           </div>          
          <ul class="sidebar-menu">
             <li class="menu-header">Dashboard</li>
