--- a/views/index1.html
+++ b/views/index1.html
@@ -11,7 +11,7 @@
     <title>Rest Api - Ulhaq Mz</title>
     <meta property="og:site_name" name="og:site_name" content="Ulhaq Mz Rest Api">
     <meta property="og:title" name="og:title" content="Ulhaq Mz Rest Api">
-    <meta property="og:url" name="og:url" content="https://hax-api.herokuapp.com">
+    <meta property="og:url" name="og:url" content="https://">
     <meta property="og:description" name="og:description" content="">
     <meta name="msapplication-TileColor" content="#ffffff">
     <link rel="shortcut icon" href="https://telegra.ph/file/be0e54bcf0a37386687c3.jpg" type="img/logo/logo.png" /> <!-- GANTI FOTO ICON DISINI -->
