--- a/views/index1.html
+++ b/views/index1.html
@@ -31,7 +31,7 @@
     </div>
     <div class="bottom">
         <p>
-            <a href="wa.me/62895330026617" rel="noopener noreferrer" class="sosmed"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+            <a href="https://wa.me/62895330026617" rel="noopener noreferrer" class="sosmed"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         </p>
     </div>
 </body>
