--- a/views/index.html
+++ b/views/index.html
@@ -342,7 +342,6 @@
                   <div class="card-body">
                   <li>Dilarang Spam Request</li>
                   <li>Jangan Ditembak Bang Sakit :)</li>
-                  <li>Dilarang Merusak Website Template</li>
                   <li>Owner Sewaktu Waktu Dapat Mengubah Ketentuan Di Website Ini!</li>
                   <li>Kalau Eror Laporkan Ke Owner</li>
                 </div>                  
@@ -354,16 +353,11 @@
                     <h4>Thanks to</h4>
                   </div>
                   <div class="card-body">
-                  <li>Allah SWT</li>
-                  <li>Nabi Muhammad Saw</li>
-                  <li>Ulhaq Mz (me)</li>
+                  <li>Ulhaq Mz</li>
                   <li>Firman Aryadi</li>
                   <li>Alkha</li>
                   <li>Fadli</li>
                   <li>Duta Store</li>
-                  <li>My Ortu</li>
-                  <li>Penyedia Module Api</li>
-                  <li>Dan kalian yang sudah menggunakan api dengan baik</li>
                   </div>                  
                 </div>
               <div class="row">
